2009-08
- Debug/trace fixes for latest Hatari changes for 1.3.1 release
2009-07
- Add Help menu items pointing to Hatari docs & site
- --timer-d support + doc updates
2009-06
- Move to BerliOS Hatari repo
- Update to latest Hatari: midi in/out, sound freq etc
2008-10
- Support paths & peripherals settings
2008-09
- Support for auto frameskip, statusbar and overlay led
- Remove support for multiple machine setups
  (now that run-time Hatari config/saving loading works)
2008-07
- Support recanim/sound, config load/save and memory snapshot load/save
- First properly working with menus and toolbars instead of buttons
- Makefile for installation
- Can adapt properly also to Hatari window getting smaller
  (works on desktop, maemo/Matchbox WM have still issues)
2008-06
- Fairly usable version with configurable buttons
- Can adapt to Hatari window size changes
2008-05
- Loading & saving Hatari configuration and checking
  changes against saved configuration works
2008-04
- First version with debugger UI
2008-02
- First version that can embed Hatari window (needed quite
  a lot of testing to find method that works well enough)