@@ -1,3 +1,5 @@
+2009-09
+- Support for setting CPU level & clock and Falcon DSP type
 2009-08
 - Debug/trace fixes for latest Hatari changes for 1.3.1 release
 2009-07
